<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Footer Start -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
          
            android:background="@layout/footer_repeat"
            android:orientation="horizontal" >
        </LinearLayout>
        <!-- Footer Ends -->


        <!-- Login Form -->
        <!-- Login Form Ends -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#372c24"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/password"
                android:textColor="#372c24"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/Loginbt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="30dip"
                android:background="#00c10d"
                android:text="@string/login"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/linktoregister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:layout_marginTop="40dip"
                android:gravity="center"
                android:text="@string/new_to_grandtaxi_register_here"
                android:textColor="#00c10d"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>